--- a/css/styles.css
+++ b/css/styles.css
@@ -486,6 +486,66 @@ body {
   background-color: #31d0aa;
 }
 
+.footer-form-input {
+  display: flex;
+  flex-direction: column;
+  align-items: baseline;
+  margin-left: 80px;
+}
+
+.review-text-footer {
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  margin-bottom: 16px;
+  color: #ffffff;
+}
+
+.review-form-footer-label {
+}
+
+.review-form-field-footer {
+  width: 264px;
+  height: 40px;
+  border-radius: 4px;
+  border: 1px solid #ffffff;
+  padding-left: 16px;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+  background: #2e2f42;
+}
+
+.review-form-field-footer::placeholder {
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 2;
+  letter-spacing: 0.04em;
+  color: #ffffff;
+}
+
+.footer-btn {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  gap: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  margin-left: 24px;
+  padding: 8px 24px;
+  min-width: 165px;
+  height: 40px;
+  border: none;
+  border-radius: 4px;
+  background: #4d5ae5;
+  color: #ffffff;
+}
+
+.footer-icon-btn {
+  fill: #ffffff;
+}
+
 .backdrop {
   position: fixed;
   top: 0;
@@ -571,7 +631,7 @@ body {
   margin-bottom: 8px;
 }
 
-.reviev-form-input-wrapper {
+.review-form-input-wrapper {
   position: relative;
 }
 
