--- a/css/styles.css
+++ b/css/styles.css
@@ -487,10 +487,12 @@ body {
 }
 
 .footer-form-input {
-  display: flex;
-  flex-direction: column;
-  align-items: baseline;
   margin-left: 80px;
+}
+
+.footer-form-box {
+  display: flex;
+  /* gap: 24px; */
 }
 
 .review-text-footer {
@@ -506,13 +508,17 @@ body {
 }
 
 .review-form-field-footer {
+  font-size: 12px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
   width: 264px;
   height: 40px;
   border-radius: 4px;
   border: 1px solid #ffffff;
   padding-left: 16px;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-  background: #2e2f42;
+  background-color: transparent;
 }
 
 .review-form-field-footer::placeholder {
@@ -524,11 +530,13 @@ body {
 }
 
 .footer-btn {
-  display: inline-flex;
+  display: flex;
   justify-content: center;
   align-items: center;
   text-align: center;
   gap: 16px;
+  font-family: 'Roboto', sans-serif;
+  font-size: 16px;
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.04em;
@@ -538,12 +546,13 @@ body {
   height: 40px;
   border: none;
   border-radius: 4px;
-  background: #4d5ae5;
+  background-color: #4d5ae5;
   color: #ffffff;
 }
 
 .footer-icon-btn {
   fill: #ffffff;
+  margin-left: 16px;
 }
 
 .backdrop {
@@ -558,7 +567,8 @@ body {
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
-  transition: opasity 250ms linear, visabiliti 250ms linear;
+  transition: opasity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visabiliti 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .backdrop.is-open {
@@ -574,26 +584,35 @@ body {
   transform: translate(-50%, -50%);
   width: 408px;
   padding: 72px 24px 24px 24px;
-  height: 584px;
+  min-height: 584px;
   border-radius: 4px;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   background: #fcfcfc;
 }
 
 .modal-close-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   position: absolute;
-  top: 32px;
-  right: 32px;
+  top: 24px;
+  right: 24px;
   width: 24px;
   height: 24px;
+  padding: 0;
   line-height: 0;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
   background-color: #e7e9fc;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-close-btn:hover,
 .modal-close-btn:focus {
+  border: none;
   background-color: #404bbf;
 }
 
@@ -628,7 +647,7 @@ body {
 }
 
 .review-form-field-wrapper {
-  margin-bottom: 8px;
+  margin-bottom: 16px;
 }
 
 .review-form-input-wrapper {
@@ -642,6 +661,8 @@ body {
   border: 1px solid rgba(46, 47, 66, 0.4);
   padding-left: 38px;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  outline: transparent;
+  background-color: transparent;
 }
 
 .review-form-field:focus {
@@ -675,6 +696,8 @@ body {
   line-height: 1.17;
   letter-spacing: 0.04em;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  background-color: transparent;
+  outline: transparent;
   color: rgba(46, 47, 66, 0.4);
 }
 
@@ -711,6 +734,9 @@ body {
   cursor: pointer;
   fill: transparent;
   margin-right: 8px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .review-form-checkbox-wrapper {
@@ -720,6 +746,7 @@ body {
 .review-form-checkbox:checked
   + .review-form-checkbox-label
   .reviev-form-own-checkbox {
+  border: none;
   background-color: #404bbf;
   fill: #f4f4fd;
 }
@@ -739,5 +766,6 @@ body {
   border-radius: 4px;
   background: #4d5ae5;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   color: #ffffff;
 }
