--- a/css/styles.css
+++ b/css/styles.css
@@ -492,7 +492,7 @@ body {
 
 .footer-form-box {
   display: flex;
-  /* gap: 24px; */
+  gap: 24px;
 }
 
 .review-text-footer {
@@ -500,6 +500,7 @@ body {
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.02em;
+  margin-left: 24px;
   margin-bottom: 16px;
   color: #ffffff;
 }
@@ -534,13 +535,14 @@ body {
   justify-content: center;
   align-items: center;
   text-align: center;
-  gap: 16px;
+  /* gap: 16px; */
   font-family: 'Roboto', sans-serif;
   font-size: 16px;
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.04em;
-  margin-left: 24px;
+  /* margin-left: 24px; */
+  cursor: pointer;
   padding: 8px 24px;
   min-width: 165px;
   height: 40px;
@@ -588,7 +590,8 @@ body {
   border-radius: 4px;
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
     0px 2px 1px rgba(0, 0, 0, 0.2);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
   background: #fcfcfc;
 }
 
