--- a/css/styles.css
+++ b/css/styles.css
@@ -505,8 +505,8 @@ body {
   color: #ffffff;
 }
 
-.review-form-footer-label {
-}
+/* .review-form-footer-label {
+} */
 
 .review-form-field-footer {
   font-size: 12px;
@@ -535,13 +535,11 @@ body {
   justify-content: center;
   align-items: center;
   text-align: center;
-  /* gap: 16px; */
   font-family: 'Roboto', sans-serif;
   font-size: 16px;
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.04em;
-  /* margin-left: 24px; */
   cursor: pointer;
   padding: 8px 24px;
   min-width: 165px;
