--- a/css/styles.css
+++ b/css/styles.css
@@ -500,13 +500,9 @@ body {
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  margin-left: 24px;
   margin-bottom: 16px;
   color: #ffffff;
 }
-
-/* .review-form-footer-label {
-} */
 
 .review-form-field-footer {
   font-size: 12px;
@@ -567,7 +563,7 @@ body {
   visibility: hidden;
   pointer-events: none;
   transition: opasity 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    visabiliti 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    visability 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .backdrop.is-open {
@@ -619,8 +615,8 @@ body {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-close-btn-icon:hover,
-.modal-close-btn-icon:focus {
+.modal-close-btn:hover .modal-close-btn-icon,
+.modal-close-btn:focus .modal-close-btn-icon {
   fill: #ffffff;
 }
 
